<resources>
    <string name="app_name">Storm Bringer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_title">Oh Snap!</string>
    <string name="error_message">There was an error. Don\'t Do That!</string>
    <string name="error_button_ok_text">OK! Let\'s Roll</string>
    <string name="degree_symbol">Degree Symbol</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="humidity">HUMIDITY</string>
    <string name="_0_88">0.88</string>
    <string name="stormy_night_skies">Stormy Night Skies</string>
    <string name="powered_by_the_oden_force"><a href="https://github.com/TheTravisM/Strom_Bringer">Powered by: The Oden Force</a></string>
    <string name="refresh_icon">Refresh Icon</string>
</resources>