<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
        name = "weather"
        type = "io.travis.stormbringer.CurrentWeather"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appBackground"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_h33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".33" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".33" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_66"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".66" />

        <TextView
            android:id="@+id/textView_LocationValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:text="@{weather.name}"
            android:textColor="@color/white"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_h33"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="San Francisco" />

        <TextView
            android:id="@+id/textView_TimeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="8dp"
            android:text="@{weather.formattedTime}"
            android:textColor="@color/white_50_trans"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_LocationValue"
            app:layout_constraintBottom_toTopOf="@+id/textView_TemperatureValue"
            tools:text="3:20 am" />

        <TextView
            android:id="@+id/textView_TemperatureValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:text="@{weather.tempString}"
            android:textColor="@android:color/white"
            android:textSize="169sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_TimeValue"
            tools:text="69" />

        <ImageView
            android:id="@+id/imageView_Degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            app:layout_constraintStart_toEndOf="@+id/textView_TemperatureValue"
            app:layout_constraintTop_toTopOf="@+id/textView_TemperatureValue"
            app:srcCompat="@drawable/degree"
            android:contentDescription="@string/degree_symbol" />

        <ImageView
            android:id="@+id/imageView_Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/weather_icon"
            app:layout_constraintBottom_toBottomOf="@+id/textView_LocationValue"
            app:layout_constraintEnd_toStartOf="@+id/textView_LocationValue"
            app:layout_constraintTop_toTopOf="@+id/textView_LocationValue"
            app:srcCompat="@drawable/cloudy_night" />



        <TextView
            android:id="@+id/textView_HumidityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textColor="@color/white_50_trans"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_33"
            app:layout_constraintStart_toStartOf="@+id/guideline_33"
            app:layout_constraintTop_toBottomOf="@+id/textView_TemperatureValue" />

        <TextView
            android:id="@+id/textView_HumidityValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{weather.humidityString}"
            tools:text="48 %"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView_HumidityLabel"
            app:layout_constraintEnd_toEndOf="@+id/textView_HumidityLabel"
            app:layout_constraintTop_toBottomOf="@+id/textView_HumidityLabel" />

        <TextView
            android:id="@+id/textView_RainSnowLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Rain Snow"
            android:textColor="@color/white_50_trans"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/guideline_66"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="@+id/guideline_66"
            app:layout_constraintTop_toBottomOf="@+id/textView_TemperatureValue" />

        <TextView
            android:id="@+id/textView_RainSnowValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_88"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView_RainSnowLabel"
            app:layout_constraintEnd_toEndOf="@+id/textView_RainSnowLabel"
            app:layout_constraintTop_toBottomOf="@+id/textView_RainSnowLabel" />

        <TextView
            android:id="@+id/textView_DescriptionValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@{weather.description}"
            tools:text="Overcast Clouds"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_RainSnowValue" />

        <TextView
            android:id="@+id/textView_PoweredBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/powered_by_the_oden_force"
            android:textColor="@color/white_50_trans"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView_Refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="refreshOnClick"
            app:layout_constraintBottom_toTopOf="@+id/textView_PoweredBy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_66"
            app:layout_constraintTop_toBottomOf="@+id/textView_DescriptionValue"
            app:srcCompat="@drawable/refresh"
            android:contentDescription="@string/refresh_icon" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>